# Shroud

./: .gitignore  BUILD-REPRODUCIBILITY.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.repro  GHOSTLINK_Explained.html  README.md  SECURITY.md  SESSION_NOTES.md  requirements-server.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release-windows.yml  tests.yml
clients/android/: build.gradle.kts  local.properties  main_anon_patch.md  settings.gradle.kts
clients/android/app/: build.gradle.kts  proguard-rules.pro
clients/android/app/src/main/: AndroidManifest.xml
clients/android/app/src/main/java/com/ghostlink/client/: CryptoProvider.kt  MainActivity.kt  MessagesScreen.kt  NetworkClient.kt  Ratchet.kt  RegistrationScreen.kt
clients/android/app/src/main/java/com/shroud/client/: AnonRouting.kt  CryptoProvider.kt  ErrorReporter.kt  MainActivity.kt  NetworkClient.kt  Ratchet.kt  RatchetSession.kt  ServerPin.kt
clients/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
clients/android/app/src/main/res/values/: themes.xml
clients/browser_extension/: README.md  background.js  manifest.json  options.html  options.js  popup.html  popup.js
clients/go_sdk/: README.md  anon_routing.go  anon_routing_test.go  go.mod
clients/ios/: AnonRouting.swift  CryptoProvider.swift  ErrorReporter.swift  GhostlinkApp.swift  MessageListView.swift  NetworkClient.swift  NetworkClientAnon.swift  RegistrationView.swift  ShroudApp.swift  main_anon_patch.md
clients/linux/: Makefile  README.md  main.c  shroud_anon_routing.py  shroud_gtk.py
clients/macos/: README.md  ShroudMacApp.swift
clients/python_sdk/: __init__.py  shroud_client.py
clients/qt6/: CMakeLists.txt  main.cpp
clients/rust_sdk/: Cargo.toml  README.md
clients/rust_sdk/src/: lib.rs
clients/web/: README.md  anon_routing.js
clients/windows/: CMakeLists.txt  anon_client.cpp  anon_client.h  anon_routing.c  anon_routing.h  build.bat  client.h  crypto.c  ed25519.c  error_reporter.c  error_reporter.h  gen_icon.py  ghostlink.qrc  ghostlink.rc  kyber1024.c  main.c  main.cpp  main_anon_patch.md  network.c  oqs_sig.c  ratchet.c  ratchet.h  shroud.qrc  shroud.rc  storage.c  tpm.c
clients/windows-admin/: .gitignore  CMakeLists.txt  README.md  admin_client.cpp  admin_client.h  admin_window.cpp  admin_window.h  main.cpp  oauth_helper.cpp  oauth_helper.h  shroud_admin.qrc  sparkline_widget.cpp  sparkline_widget.h
clients/windows-admin/tabs/: audit_tab.cpp  audit_tab.h  backup_tab.cpp  backup_tab.h  bans_tab.cpp  bans_tab.h  claude_chat_tab.cpp  claude_chat_tab.h  controls_tab.cpp  controls_tab.h  devices_tab.cpp  devices_tab.h  diagnostics_tab.cpp  diagnostics_tab.h  errors_tab.cpp  errors_tab.h  federation_tab.cpp  federation_tab.h  identity_tab.cpp  identity_tab.h  logs_tab.cpp  logs_tab.h  manifest_tab.cpp  manifest_tab.h  multisig_tab.cpp  multisig_tab.h  relay_ssh_tab.cpp  relay_ssh_tab.h  settings_tab.cpp  settings_tab.h  stats_tab.cpp  stats_tab.h  user_detail_dialog.cpp  user_detail_dialog.h  users_tab.cpp  users_tab.h
clients/windows/installer/: .gitignore  README.md  build-msi.bat  build-msi.ps1
crypto/: abuse.py  anon_creds.py  anon_push.py  anon_routing.py  archive.py  at_rest.py  backup.py  calls.py  device_link.py  disappearing.py  disk_quota.py  double_ratchet.py  error_reporting.py  errors.py  federation.py  file_transfer.py  fips_crypto.py  forward_quote.py  group_calls.py  hybrid_sig.py  link_preview.py  local_search.py  ml_kem_1024.py  operator_manifest.py  polling.py  pq_double_ratchet.py  pq_hybrid.py  presence.py  reactions.py  safety_numbers.py  srp6a.py  stickers.py  strip_metadata.py  treekem.py  voice_notes.py
deploy/aws-nitro/: Dockerfile.enclave  attestation_verifier.py  enclave-entrypoint.sh  parent-bootstrap.sh  parent-config-server.py  parent-kms-proxy.py  vsock-server.py
deploy/aws-nitro/terraform/: main.tf  user-data.sh.tftpl
deploy/aws-simple/: user-data.sh
deploy/docker-compose/: Dockerfile.sfu  README.md  docker-compose.yml
docs/: anon-routing-protocol.md  aws-nitro.md  federation-deploy.md  linux-roadmap.md  multisig-releases.md  nym-roadmap.md  nym.md  protocol-modules.md  security-faq.md  tor.md  torrc.example  windows-installer.md
release/: multisig.py  multisig_verify.py  sign_manifest.py  verify_release.py
releases/: README.md
releases/v1.7.0/: GHOSTLINK-v1.7.0.apk  SHA256SUMS.txt
releases/v1.8.0/: GHOSTLINK-v1.8.0.apk  SHA256SUMS.txt
releases/v1.9.0/: SHA256SUMS.txt  SHROUD-v1.9.0.apk
releases/v2.0.0/: GHOSTLINK-v2.0.0.apk  SHA256SUMS.txt
releases/v2.1.0/: SHA256SUMS.txt  SHROUD-v2.1.0.apk
releases/v2.2.0/: SHA256SUMS.txt
releases/v2.3.0/: SHA256SUMS.txt
releases/v2.3.1/: SHA256SUMS.txt
releases/v2.3.2/: SHA256SUMS.txt
releases/v2.4.0/: SHA256SUMS.txt  SHROUD-v2.4.0.apk
releases/v2.4.1/: SHA256SUMS.txt  SHROUD-v2.4.1.apk
releases/v2.4.2/: GHOSTLINK-v2.4.2.apk  SHA256SUMS.txt
releases/v2.4.3/: SHA256SUMS.txt  SHROUD-v2.4.3.apk
releases/v2.4.4/: GHOSTLINK-v2.4.4.apk  SHA256SUMS.txt
releases/v2.4.5/: SHA256SUMS.txt  SHROUD-v2.4.5.apk
scripts/: repro-check.ps1  repro-check.sh
server/: server.py  sfu.py
server/admin/: admin.css  admin.js  device.html  device.js  index.html  login.css  login.html  login.js  shared.js  user.html  user.js
tests/: benchmark.py  diagnostics_live.py  e2e_anon_protocol.py  federation_e2e.py  federation_live.py  run_all.py
tools/: build_crypto.py  build_operator_manifest.py  diagnostics_inbox.py  discord_bridge.py  echo_bot.py  federation_join.py  make-msi-release.ps1  matrix_bridge.py  operator_dashboard.py  shroud_cli.py  shroud_doctor.py  sticker_authoring.py  tor_setup.sh  voice_call_demo.py
zig/: build.zig
zig/src/: main.zig
